# apogee-prediction

./: README.md
Apogee_prediction/: APA_Single_Particle.m  Copy_of_SFP_constantCd.asv  FP_Model.m  FP_Model_IUKF.asv  FP_Model_IUKF.m  FP_Model_IUKF_1.m  FP_Model_Particles.m  FP_Model_UKF.m  Observer_UKF.m  UKF.m  create_mass_function.m  get_mass.m  get_std.m  main.m  main_real_data.m  main_simulated.m  motor_thrust.m  plotting.mlx  test.m  u.m
Apogee_prediction_old/: ExtendedKalmanFilter.m  FP_Model_UKF.m  KalmanFilter.m  UKF.m  create_thrust_function.m  main_real_data.m
CARFAB/: Regulus.m  dynamics_update.m  main.m  state_update.m
CARFS/: ADI.m  Atmospheric_data_280K.xlsx  Atmospheric_data_65K.xlsx  Averaged_first2inches_nosecone.m  CARFS_mainscript.m  JoeData.csv  (+13 more)
CARFS-24/: APA_IUKF.m  APA_single_particle.asv  APA_single_particle.m  Airbrake.asv  Airbrake.m  PIDController.m  Regulus.m  Serial_streamer.m  StepperMotor.m  apa.m  dynamics_update.m  main.m  plot_data.m  plot_force.m  state_update.m
filter-comparison/: .gitignore  CMakeLists.txt  main.cpp  regulus.csv
filter-comparison/include/: CKFBase.h  CKFConstantAcceleration.h  CKFConstantCB.h  EKFBase.h  EKFConstantAcceleration.h  EKFConstantCB.h  KalmanFilter.h  RowMajorMatrix.h  UKFBase.h  UKFConstantAcceleration.h  UKFConstantCB.h
filter-comparison/plotting/: plotting.py
filter-comparison/src/: CKFBase.cpp  CKFConstantAcceleration.cpp  CKFConstantCB.cpp  EKFBase.cpp  EKFConstantAcceleration.cpp  EKFConstantCB.cpp  KalmanFilter.cpp  UKFBase.cpp  UKFConstantAcceleration.cpp  UKFConstantCB.cpp
(+236 files in other folders)
